--- a/Afternoon Projects/Unit 3 - Networking/Day 4/Representative/Representative/Resource/Info.plist
+++ b/Afternoon Projects/Unit 3 - Networking/Day 4/Representative/Representative/Resource/Info.plist
@@ -41,5 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>App Transport Security Settings</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
